...
        }}
      />
      <Stack.Screen 
        name="WalletCreate" 
        component={WalletCreateScreen}
        options={{
          title: 'Create Wallet',
          ...getTransitionConfig('auth'),
        }}
      />
      <Stack.Screen 
        name="WalletImport" 
        component={WalletImportScreen}
        options={{
          title: 'Import Wallet',
          ...getTransitionConfig('auth'),
        }}
      />
      <Stack.Screen 
        name="EmailLogin" 
        component={EmailLoginScreen}
...
